--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "JwtSettings": {
-    "SecretKey": "x9f!3r#B7zBp$2zYqM8w?Ht6Egn4kCkR"
+    "SecretKey": "KENDI-ANAHTARIN"
   },
   "AllowedHosts": "*"
 
